# Aether

./: .gitignore  CMakeLists.txt  README.md
Aether/: README.md
Aether/engine/src/core/: Order.h  OrderBook.h
api/app/: .gitignore  README.md  main.py
api/app/core/: config.py  dependencies.py  rate_limiting.lua  rate_limiting.py  security.py
api/app/models/: auth.py  user.py
api/app/routers/: auth.py  health.py  orders.py  users.py
api/app/services/: auth_service.py  grpc_client.py  user_repo.py
docs/: BENCHMARK.md  architecture.md  background.md  design.md
engine/: CMakeLists.txt  README.md
engine/benchmarks/: Cpp_ServiceLayerBenchmarks.cpp  Full_ServiceLayer.cpp  MatchingBenchmarks.cpp
engine/src/: main.cpp
engine/src/core/: Order.h  OrderBook.cpp  OrderBook.h  OrderBookState.h  PriceLevel.h  Trade.h
engine/src/network/: AetherServer.cpp  AetherServer.h  CMakeLists.txt
engine/src/utils/: BlockingQueue.h
engine/tests/: OrderBookTests.cpp  ServiceLayerTests.cpp
engine_config/: securities.csv
protos/: CMakeLists.txt  market_data.proto  order.proto  order_management.proto
